--- a/docs/node/docs/pages/getting-started/ethers.mdx
+++ b/docs/node/docs/pages/getting-started/ethers.mdx
@@ -500,6 +500,7 @@ Now that you know how to use ethers.js with Tevm, you can:
       <li><a href="../examples/ethers">Complete Ethers.js integration guide</a></li>
       <li><a href="../core/forking">Powerful forking capabilities</a></li>
       <li><a href="../core/managing-state">EVM state management</a></li>
+      <li><a href="./bundler">Direct Solidity imports</a></li>
     </ul>
   </div>
   
@@ -509,6 +510,7 @@ Now that you know how to use ethers.js with Tevm, you can:
       <li><a href="../introduction/what-is-tevm-node">What is Tevm Node?</a></li>
       <li><a href="../core/create-tevm-node">Creating a Tevm Node</a></li>
       <li><a href="../api/json-rpc">JSON-RPC interface</a></li>
+      <li><a href="../reference/bundler">Contract Bundler</a></li>
     </ul>
   </div>
   
@@ -524,5 +526,6 @@ Now that you know how to use ethers.js with Tevm, you can:
 
 <div className="flex gap-4 mt-8">
   <Button href="./viem" variant="accent">← Viem Integration</Button>
+  <Button href="./bundler">Bundler Quickstart →</Button>
   <Button href="../examples/ethers">Using with Ethers.js →</Button>
 </div>
