--- a/docs/node/docs/pages/getting-started/viem.mdx
+++ b/docs/node/docs/pages/getting-started/viem.mdx
@@ -425,6 +425,7 @@ Dive deeper into Tevm's powerful capabilities:
 - [Forking capabilities](/core/forking) to simulate production chains
 - [State management](/core/managing-state) for manipulating the blockchain
 - [Mining modes](/core/mining-modes) for controlling transaction inclusion
+- [Direct Solidity imports](/getting-started/bundler) with the Tevm Bundler
 
 ### Check Out Examples
 
@@ -441,6 +442,7 @@ Master the Tevm API for more sophisticated applications:
 - [EVM events & hooks](/api/evm-events) for detailed execution analysis
 - [Custom precompiles](/advanced/custom-precompiles) for extending the EVM
 - [Transaction pool management](/advanced/txpool) for pending transaction control
+- [Contract Bundler](/reference/bundler) for importing Solidity files directly
 ::::
 
 <div style={{ display: 'flex', gap: '1rem', marginTop: '2rem' }}>
