--- a/docs/node/docs/pages/reference/bundler-plugins.mdx
+++ b/docs/node/docs/pages/reference/bundler-plugins.mdx
@@ -1,6 +1,10 @@
 # Bundler Plugins
 
-Tevm provides integration with popular JavaScript bundlers through a suite of plugins. These plugins enable direct importing of Solidity files into your TypeScript/JavaScript code.
+Tevm provides optional integration with popular JavaScript bundlers through a suite of plugins. These plugins enable direct importing of Solidity files into your TypeScript/JavaScript code, automatically compiling those contracts into type-safe Tevm contract instances.
+
+:::note
+Tevm Node is the primary product. Using the bundler is optional. You can also generate contract types with `npx tevm gen` (see [Codegen Approach](#codegen-approach)).
+:::
 
 ## Available Plugins
 
@@ -15,47 +19,76 @@ Tevm provides plugins for most popular JavaScript bundlers:
 | Bun | `tevm/bundler/bun-plugin` | [@tevm/bun-plugin](https://github.com/evmts/tevm-monorepo/tree/main/bundler-packages/bun) |
 | Rspack | `tevm/bundler/rspack-plugin` | [@tevm/rspack-plugin](https://github.com/evmts/tevm-monorepo/tree/main/bundler-packages/rspack) |
 
+All plugins share a similar usage pattern and a single configuration interface.
+
+## Prerequisites & Key Points
+
+### Optional Bundler
+
+You can compile contracts manually or use `npx tevm gen`. The plugins are purely optional if you prefer a different workflow.
+
+### TypeScript Integration
+
+For best results, add the Tevm TS plugin to your tsconfig.json. This allows your editor to resolve Solidity imports, provide NatSpec docs on hover, go-to-definition on solidity methods, and more.
+
+### .s.sol for Bytecode
+
+By default, Tevm only generates bytecode for Solidity files ending in `.s.sol`. Regular `.sol` files still compile for ABIs, but omit deployable bytecode. This helps differentiate purely interface-like contracts from ones you intend to deploy or call as scripts.
+
+### Tevm Cache
+
+Compiled artifacts and metadata are stored in a `.tevm` folder. It is strongly recommended to `.gitignore` this directory.
+
+### Foundry/Remappings
+
+If you have a Foundry setup or custom remappings, you can enable them in a `tevm.config.json`.
+
+### Next.js
+
+Next.js can conflict with the TS plugin's type-checking. If you wish to keep type-checking turned on for Next.js, consider the [Codegen Approach](#codegen-approach). Otherwise, you may disable type-checking in your Next config.
+
 ## Plugin Configuration
 
 All Tevm bundler plugins accept a similar configuration object:
 
 ```ts
 type PluginOptions = {
-  // Optional solc compiler version
-  solc?: '0.8.19' | '0.8.20' | /* other supported versions */;
+  // (Optional) solc compiler version
+  solc?: '0.8.19' | '0.8.20' | /* other supported solc versions */
 }
 ```
 
+For more complex, global settings (e.g., Foundry integration, custom libs, or remappings), place them in `tevm.config.json` (see [Configuration with tevm.config.json](#configuration-with-tevmconfigjson)).
+
 ## Bundler-Specific Setup
 
-### Vite
+### 1. Vite Example
 
 ```ts
 // vite.config.ts
 import { defineConfig } from 'vite'
-import { vitePluginTevm } from 'tevm/bundler/vite-plugin'
 import react from '@vitejs/plugin-react'
+import { vitePluginTevm } from 'tevm/bundler/vite-plugin'
 
 export default defineConfig({
   plugins: [
     react(),
     vitePluginTevm({
-      solc: '0.8.20', // optional: specify solc version
+      solc: '0.8.20', // optional
     }),
   ],
 })
 ```
 
-### Webpack
+### 2. Webpack Example
 
 ```js
 // webpack.config.js
 const { webpackPluginTevm } = require('tevm/bundler/webpack-plugin')
 
 module.exports = {
-  // Other webpack config
+  // other config...
   plugins: [
-    // Other plugins
     webpackPluginTevm({
       solc: '0.8.20', // optional
     }),
@@ -63,24 +96,23 @@ module.exports = {
 }
 ```
 
-### Rollup
+### 3. Rollup Example
 
 ```js
 // rollup.config.js
 import { rollupPluginTevm } from 'tevm/bundler/rollup-plugin'
 
 export default {
-  // Other rollup options
+  // other Rollup options...
   plugins: [
-    // Other plugins
     rollupPluginTevm({
-      solc: '0.8.20', // optional
+      solc: '0.8.20',
     }),
   ],
 }
 ```
 
-### ESBuild
+### 4. ESBuild Example
 
 ```js
 // build.js
@@ -93,13 +125,13 @@ build({
   bundle: true,
   plugins: [
     esbuildPluginTevm({
-      solc: '0.8.20', // optional
+      solc: '0.8.20',
     }),
   ],
 })
 ```
 
-### Bun
+### 5. Bun Example
 
 ```ts
 // plugins.ts
@@ -107,31 +139,29 @@ import { plugin } from 'bun'
 import { tevmBunPlugin } from 'tevm/bundler/bun-plugin'
 
 plugin(tevmBunPlugin({
-  solc: '0.8.20', // optional
+  solc: '0.8.20',
 }))
 ```
 
-Then in your `bunfig.toml`:
-
 ```toml
+# bunfig.toml
 preload = ["./plugins.ts"]
 
 [test]
 preload = ["./plugins.ts"]
 ```
 
-### Rspack
+### 6. Rspack Example
 
 ```js
 // rspack.config.js
 const { rspackPluginTevm } = require('tevm/bundler/rspack-plugin')
 
 module.exports = {
-  // Other rspack config
+  // other Rspack config...
   plugins: [
-    // Other plugins
     rspackPluginTevm({
-      solc: '0.8.20', // optional
+      solc: '0.8.20',
     }),
   ],
 }
@@ -139,109 +169,119 @@ module.exports = {
 
 ## TypeScript Plugin
 
-For full TypeScript integration, you also need to configure the Tevm TypeScript plugin in your `tsconfig.json`:
+Alongside the bundler plugin, configure your TypeScript environment to benefit from editor-level Solidity integration (NatSpec hovers, jump-to-definition, type-checking, etc.):
 
 ```json
 {
   "compilerOptions": {
     "plugins": [
-      {
-        "name": "@tevm/ts-plugin"
-      }
+      { "name": "@tevm/ts-plugin" }
     ]
+    // ...rest of your TS options
   }
 }
 ```
 
-The TypeScript plugin provides:
+**VSCode**: Make sure you use the "workspace version" of TypeScript to see accurate IntelliSense.
 
-- Type checking for Solidity imports
-- Go-to-definition navigation from TypeScript to Solidity
-- Hover information showing NatSpec documentation from Solidity
-- Auto-completion for contract methods and events
+## How the Bundler Works
 
-## Technical Details
+All Tevm bundler plugins share a unified core (`@tevm/base-bundler`):
 
-### How Plugins Work
+### Import Detection & Resolution
 
-All Tevm bundler plugins are built on top of the `@tevm/base-bundler` package, which provides the core functionality:
+- Scans for `.sol` imports; merges in tsconfig.json paths, foundry remappings, and your tevm.config.json.
 
-1. **Import Resolution**: When a `.sol` file is imported, the bundler resolves all of its dependencies
-2. **Compilation**: Using the specified solc version, the bundler compiles the Solidity code
-3. **Code Generation**: The compiled artifacts are transformed into TypeScript code generating a Tevm Contract instance
-4. **Caching**: Compilation results are cached in the `.tevm` directory to improve build performance
+### Compilation
 
-### Unplugin Implementation
+- Uses solc to compile the full dependency graph.
+- If the file ends in `.s.sol`, bytecode is generated; otherwise only ABI is produced.
 
-Most of the Tevm bundler plugins are implemented using [unplugin](https://github.com/unjs/unplugin), which allows for a unified implementation that works across multiple bundlers. This is why the configuration options are consistent across different bundlers.
+### Code Generation
+
+- Creates a TypeScript module that exports a Tevm Contract instance (with `.read` and `.write` methods, abi, and optionally bytecode).
+
+### Caching
+
+- Stores results in `.tevm` to avoid unnecessary recompilation. Consider ignoring `.tevm` in your `.gitignore`.
+
+### LSP & TS Plugin
+
+- The `@tevm/ts-plugin` references bundler outputs, enabling advanced IDE features like contract-level auto-completion, hover docs, and go-to-definition directly into Solidity code.
 
 ## Configuration with tevm.config.json
 
-In addition to plugin-specific configuration, you can create a `tevm.config.json` file in your project root to configure the bundler behavior:
+Create a `tevm.config.json` in your project root for advanced bundler behaviors:
 
 ```json
 {
   "foundryProject": true,
-  "libs": ["lib", "node_modules"],
+  "libs": ["./lib", "./node_modules"],
   "remappings": {
     "foo": "vendored/foo"
   },
   "debug": false,
   "cacheDir": ".tevm",
-  "jsonAsConst": ["**/abi.json"]
+  "jsonAsConst": ["**/*.abi.json"]
 }
 ```
 
 | Option | Type | Description |
 |--------|------|-------------|
-| `foundryProject` | `boolean \| string` | Enable Foundry integration or path to foundry.toml |
-| `libs` | `string[]` | Custom library paths for Solidity imports |
+| `foundryProject` | `boolean \| string` | Enable Foundry integration (`true`) or path to foundry.toml |
+| `libs` | `string[]` | Library paths for Solidity imports (used alongside Foundry libs) |
 | `remappings` | `Record<string, string>` | Custom import remappings |
-| `debug` | `boolean` | Enable debug logging |
-| `cacheDir` | `string` | Custom cache directory (defaults to `.tevm`) |
-| `jsonAsConst` | `string \| string[]` | Glob pattern(s) for JSON files to be treated as const |
+| `debug` | `boolean` | Output extra debug logs and files in `.tevm` |
+| `cacheDir` | `string` | Location for compiled artifacts (default: `.tevm`) |
+| `jsonAsConst` | `string \| string[]` | Glob patterns for JSON files to be typed as const in TS |
 
-## Handling Different Module Formats
+## Codegen Approach
 
-Tevm bundler plugins generate different module formats depending on your bundler:
+If you prefer not to rely on bundler-based transformations (for instance, if you're using Next.js with strict type-checking enabled), Tevm also supports an offline code generation approach:
 
-- **ESM** modules for ESM-compatible bundlers (Vite, Rollup with ESM output)
-- **CommonJS** modules for CJS-compatible bundlers (Webpack, older Rollup configurations)
+```bash
+npx tevm gen
+```
+
+- Generates `.ts` files next to each `.sol` file (or wherever configured).
+- You can commit these `.ts` files to source control.
+- The result is effectively the same as bundler output but doesn't require hooking into your build process.
+
+This is especially helpful when:
+
+- You have a framework that tightly controls its build pipeline (e.g., Next.js with enforced type-checking).
+- You prefer explicit, committed TypeScript artifacts for contracts.
+- You want a stable CI pipeline or want to avoid runtime resolution.
 
 ## Troubleshooting
 
-If you're experiencing issues with the bundler plugins:
+### 1. Missing or Red Underlines in Editor
 
-### Missing TypeScript Types
+- Confirm you have `"plugins": [{ "name": "@tevm/ts-plugin" }]` in tsconfig.json.
+- In VSCode, switch to the "workspace version" of TypeScript.
 
-Ensure your editor is using the workspace version of TypeScript. In VS Code:
+### 2. Type-check Errors with Next.js
 
-1. Press `Ctrl+Shift+P` or `Cmd+Shift+P`
-2. Type "TypeScript: Select TypeScript Version"
-3. Choose "Use Workspace Version"
+- Next's built-in type checker might not handle dynamic `.sol` imports well.
+- Either disable type-checking in next.config.mjs or use [Codegen Approach](#codegen-approach).
 
-### Bundling Errors
+### 3. "File Not Found" Errors
 
-- Verify you've installed the correct bundler plugin
-- Check your bundler configuration matches the examples
-- Ensure you're using a compatible Solidity version
-- Verify your module imports use the proper syntax
+- Check that your libraries or local imports are accounted for in libs or remappings.
+- If you're using Foundry, ensure `foundryProject: true` is set in tevm.config.json.
 
-### Cache Issues
+### 4. Cache Stale Issues
 
-If you're experiencing unexpected behavior after changing Solidity files, try clearing the cache by deleting the `.tevm` directory.
+- If a contract's changes don't appear, remove the `.tevm` folder and rebuild.
 
-## Examples
+## Examples and Further Reading
 
-For complete working examples of Tevm bundler plugins in action, see the following examples in the Tevm monorepo:
+- [Examples in Monorepo](https://github.com/evmts/tevm-monorepo/tree/main/examples): Vite, Next, Bun, ESBuild
+- [Tevm Contract Reference](/reference/contract): Usage docs for contract reads, writes, events 
+- [Wagmi + Tevm](https://github.com/evmts/tevm-monorepo/tree/main/examples): See WagmiReads.tsx and WagmiWrites.tsx examples for real usage
+- [Inline Solidity (Coming Soon)](#): `` sol`` `` inline code snippet approach
+- [Globals.md](https://github.com/evmts/tevm-monorepo/tree/main/bundler-packages/base-bundler/docs/globals.md): Core reference for bundler internals
 
-- [Vite Example](https://github.com/evmts/tevm-monorepo/tree/main/examples/vite)
-- [Next.js Example](https://github.com/evmts/tevm-monorepo/tree/main/examples/next)
-- [Bun Example](https://github.com/evmts/tevm-monorepo/tree/main/examples/bun)
-- [ESBuild Example](https://github.com/evmts/tevm-monorepo/tree/main/examples/esbuild)
-
-## Additional Resources
-
-- [Tevm Contract Documentation](/reference/contract)
-- [Direct Solidity Imports Guide](/reference/bundler)
-- [Tevm GitHub Repository](https://github.com/evmts/tevm-monorepo)
+:::tip
+Remember: Tevm's bundler is optional—it's there to make importing Solidity as straightforward as possible. If your project setup or environment constraints make the bundler difficult, consider the `tevm gen` codegen workflow or a purely manual approach to contract artifacts.
+:::
