--- a/docs/node/docs/pages/reference/index.mdx
+++ b/docs/node/docs/pages/reference/index.mdx
@@ -13,6 +13,7 @@ This section contains detailed API reference documentation for all Tevm packages
 - [@tevm/blockchain](/reference/blockchain) - Blockchain data structures and utilities
 - [@tevm/common](/reference/common) - Shared utilities and constants
 - [@tevm/contract](/reference/contract) - Library for using contracts in typesafe way
+- [Contract Bundler](/reference/bundler) - Import Solidity files directly in TypeScript
 - [@tevm/decorators](/reference/decorators) - Extension decorators
 - [@tevm/evm](/reference/evm) - Core EVM implementation
 - [@tevm/memory-client](/reference/memory-client) - Batteries included viem client along with tree shakable actions
