--- a/docs/node/docs/pages/reference/bundler/index.mdx
+++ b/docs/node/docs/pages/reference/bundler/index.mdx
@@ -8,12 +8,12 @@ description: A reference guide to Tevm's bundler functionality
 The Tevm Contract Bundler allows you to import Solidity files directly into your TypeScript code, enabling a seamless development experience with type safety and IDE integration.
 
 :::note
-This page has been split into smaller, more manageable sections. Please visit the new [Bundler Reference](/reference/bundler/) for the updated documentation.
+Tevm Node is the primary product. Using the bundler is optional. You can also generate contract types with `npx tevm gen` (see [Codegen Approach](/reference/bundler/troubleshooting#codegen-approach)).
 :::
 
 ## Quick Navigation
 
-The bundler documentation is now split into several sections for better organization:
+The bundler documentation is split into several sections for better organization:
 
 - **[Overview](/reference/bundler/overview)** - Introduction, key benefits, available plugins
 - **[Internals](/reference/bundler/internals)** - How the bundler works under the hood
@@ -34,7 +34,7 @@ This means you can interact with your contracts in a fully type-safe way, with e
 
 For a quick introduction to using the bundler, see the [Bundler Quickstart](/getting-started/bundler) guide.
 
-If you're looking for detailed reference information, explore the sections linked above.
+If you're looking for detailed reference information, explore the sections above.
 
 ## Coming Soon Features
 
