:memo: Docs: fix

--- a/docs/node/docs/pages/getting-started/bundler.mdx
+++ b/docs/node/docs/pages/getting-started/bundler.mdx
@@ -509,7 +509,7 @@ This will provide the same type-safety and features as file-based imports, but w
   - [Internals](/reference/bundler/internals) - How the bundler works
   - [Methods & Exports](/reference/bundler/methods) - Advanced APIs
   - [Troubleshooting](/reference/bundler/troubleshooting) - Common issues and solutions
-- For AI and LLM users, the full Tevm documentation is available as plain text at [/llms-full.txt](/llms-full.txt)
+- For AI and LLM users, the full Tevm documentation is available as plain text at [https://node.tevm.sh/llms-full.txt](https://node.tevm.sh/llms-full.txt)
 
 ## Troubleshooting
 
