--- a/docs/node/docs/pages/index.mdx
+++ b/docs/node/docs/pages/index.mdx
@@ -197,6 +197,6 @@ import { Card } from "../../components";
 </div>
 
   <div className="mt-12 text-sm opacity-80">
-    Here's our <a href="/llms-full.txt">documentation as plain text</a> for providing context to LLM systems
+    Here's our <a href="https://node.tevm.sh/llms-full.txt">documentation as plain text</a> for providing context to LLM systems
   </div>
 </HomePage.Root>
